# Ghetto-Hook

./: CMakeLists.txt  README.md  ghetto_hook.c  ghetto_hook.h  ghetto_hook_internal.h  x86_64_core.c  x86_64_core.h
src/: ghetto_hook.c  ghetto_hook.h  ghetto_hook_internal.h  mach_excUser.c  main.c  x86_64_core.c  x86_64_core.h
